--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
 
     "devDependencies" : {
         "grunt" :                       "~0.4.0",
-        "grunt-contrib-cssmin":         "~0.8.0",
-        "grunt-contrib-sass":           "*",
-        "grunt-contrib-uglify":         "~0.2.2",
-        "grunt-contrib-watch":          "*",
-        "grunt-cssc":                   "*",
-        "grunt-htmlhint":               "*",
-        "grunt-contrib-concat":         "~0.1.3",
-        "grunt-contrib-jshint":         "~0.9.2",
-        "matchdep":                     "*"
+        "grunt-contrib-cssmin":         "~0.9.0",
+        "grunt-contrib-sass":           "~0.7.3",
+        "grunt-contrib-uglify":         "~0.4.0",
+        "grunt-contrib-watch":          "~0.6.1",
+        "grunt-cssc":                   "~0.2.6",
+        "grunt-htmlhint":               "~0.4.0",
+        "grunt-contrib-concat":         "~0.4.0",
+        "grunt-contrib-jshint":         "~0.10.0",
+        "matchdep":                     "~0.3.0"
     }
 }
