--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
     "name" : "SiteName",
     "version" : "1.0.0",
-    "author" : "Jesse JWorksUK James",
-
+    "author" : {
+        "name" : "Jesse James",
+        "email" : "me@jworksuk.com",
+        "url" : "http://www.jworksuk.com/"
+    },
     "devDependencies" : {
-        "grunt" :                       "~0.4.0",
-        "grunt-contrib-cssmin":         "~0.9.0",
-        "grunt-contrib-sass":           "~0.7.3",
-        "grunt-contrib-uglify":         "~0.4.0",
-        "grunt-contrib-watch":          "~0.6.1",
-        "grunt-cssc":                   "~0.2.6",
-        "grunt-htmlhint":               "~0.4.0",
-        "grunt-contrib-concat":         "~0.4.0",
-        "grunt-contrib-jshint":         "~0.10.0",
-        "matchdep":                     "~0.3.0"
+        "grunt" :                       "*",
+        "grunt-contrib-cssmin":         "*",
+        "grunt-contrib-sass":           "*",
+        "grunt-contrib-uglify":         "*",
+        "grunt-contrib-watch":          "*",
+        "grunt-cssc":                   "*",
+        "grunt-htmlhint":               "*",
+        "grunt-contrib-concat":         "*",
+        "grunt-contrib-jshint":         "*",
+        "matchdep":                     "*"
     }
 }
