--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name" : "SiteName",
+    "name" : "WeezyBoilerplate",
     "version" : "1.0.0",
     "author" : {
         "name" : "Jesse James",
