--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "SiteName",
+    "name": "WeezyBoilerplate",
     "version": "1.0.0",
     "dependencies": {
         "jquery": "~1.10.2"
